--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta property="og:title" content="김현빈 - 프로필 링크">
-<meta property="og:description" content="ESTP 김현빈의 삶">
+<meta property="og:description" content="궁금하면 들어와바바">
 <meta property="og:image" content="공유할 이미지">
 <title>김현빈 - 프로필 링크</title>
 <style>
@@ -86,9 +86,9 @@
         <h1 class="main">김현빈</h1>
         <p class="sub">돈까스 좋아하세요?</p> 
         <a target="_blank" href="https://instagram.com/hyunbin0206?igshid=YmMyMTA2M2Y=">instagram</a>
-        <a target="_blank" href="https://instagram.com/wlsl_lucky?igshid=YmMyMTA2M2Y=">운진누님 instagram</a>
-        <a target="_blank" href="https://instagram.com/yexxn_zz?igshid=YmMyMTA2M2Y=">존예에진티비팬입미다</a>
-        <a target="_blank" href="https://www.naver.com/">넣을거 추천좀</a> 
+        <a target="_blank" href="https://instagram.com/wlsl_lucky?igshid=YmMyMTA2M2Y=">운진이누나</a>
+        <a target="_blank" href="https://instagram.com/yexxn_zz?igshid=YmMyMTA2M2Y=">존예에진님</a>
+        <a target="_blank" href="asked.kr/hyunbin0206">에스크</a> 
     </div>
 </body>
 </html>
