--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <a target="_blank" href="https://instagram.com/hyunbin0206?igshid=YmMyMTA2M2Y=">instagram</a>
         <a target="_blank" href="https://instagram.com/wlsl_lucky?igshid=YmMyMTA2M2Y=">운진이누나</a>
         <a target="_blank" href="https://instagram.com/yexxn_zz?igshid=YmMyMTA2M2Y=">존예에진님</a>
-        <a target="_blank" href="asked.kr/hyunbin0206">에스크</a> 
+        <a target="_blank" href="https://asked.kr/hyunbin0206">에스크</a> 
     </div>
 </body>
 </html>
