--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             border-radius: 8px;
 
             margin-bottom: 10px;
-
+    
             font-size: 14px;
             font-weight: bold;
             color: #44398A;
@@ -84,7 +84,7 @@
     <div class="wrap">
         <div class="profile" ></div>
         <h1 class="main">김현빈</h1>
-        <p class="sub">돈까스 좋아하세요?</p> 
+        <p class="sub">10/1 홍대갈사람</p> 
         <a target="_blank" href="https://instagram.com/hyunbin0206?igshid=YmMyMTA2M2Y=">instagram</a>
         <a target="_blank" href="https://instagram.com/wlsl_lucky?igshid=YmMyMTA2M2Y=">운진이누나</a>
         <a target="_blank" href="https://instagram.com/yexxn_zz?igshid=YmMyMTA2M2Y=">존예에진님</a>
