--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
         <h1 class="main">김현빈</h1>
         <p class="sub">10/1 홍대갈사람</p> 
         <a target="_blank" href="https://instagram.com/hyunbin0206?igshid=YmMyMTA2M2Y=">instagram</a>
-        <a target="_blank" href="https://instagram.com/wlsl_lucky?igshid=YmMyMTA2M2Y=">sis</a>
-        <a target="_blank" href="https://youtube.com/watch?v=4C_ola0rn1g">cas</a>
+        <a target="_blank" href="https://instagram.com/wlsl_lucky?igshid=YmMyMTA2M2Y=">frisister</a>
+        <a target="_blank" href="https://youtube.com/watch?v=4C_ola0rn1g">song</a>
         <a target="_blank" href="https://asked.kr/hyunbin0206">asked</a> 
     </div>
 </body>
