--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
     <div class="wrap">
         <div class="profile" ></div>
         <h1 class="main">김현빈</h1>
-        <p class="sub">10/1 홍대갈사람</p> 
+        <p class="sub">찜 당한사람</p> 
         <a target="_blank" href="https://instagram.com/hyunbin0206?igshid=YmMyMTA2M2Y=">instagram</a>
-        <a target="_blank" href="https://www.youtube.com/watch?v=MTMwOY7mDDo">🎵</a>
+        <a target="_blank" href="https://www.youtube.com/watch?v=VqaKisKIyUo">🎵</a>
         <a target="_blank" href="https://asked.kr/hyunbin0206">asked</a> 
     </div>
 </body>
