--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
         <a target="_blank" href="https://instagram.com/hyunbin0206?igshid=YmMyMTA2M2Y=">instagram</a>
         <a target="_blank" href="https://www.youtube.com/watch?v=VqaKisKIyUo">🎵</a>
         <a target="_blank" href="https://asked.kr/hyunbin0206">asked</a> 
+        <a target="_blank" href="https://ngl.link/hyunbin0206">ngl</a>
     </div>
 </body>
 </html>
